portfolio's first commit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,5 +17,31 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.custom-button {
+  background-color: #009c86;
+  color: white;
+  border: none;
+  padding: 10px 10px;
+  font-size: 16px;
+  font-weight: 400;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: transform 0.1s ease, background-color 0.1s ease;
+}
+
+.custom-button:hover:active {
+  transform: scale(0.99);
+  background-color: #009c86;
+}
+
+.custom-button:hover {
+  background-color: #00dfc1;
+}
+
+.custom-input:focus {
+  outline-width: 0;
+  outline-color: #009c86;
+  background-color: whitesmoke;
 }
